[package]
name = "combat-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.8" }
bevy_rapier2d = "*"
bevy_ecs_ldtk = "*"

log = "*"

[profile.dev.package.bevy_rapier2d]
opt-level = 3

# [profile.release]
# debug = true